--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
         <version>4.13.2</version>
         <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.9.0</version>
+        <scope>test</scope>
+    </dependency>
+
 
 </dependencies>
 </project>
