--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
         <version>7.9.0</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-support</artifactId>
+        <version>4.19.1</version>
+        <scope>test</scope>
+    </dependency>
 
 
 </dependencies>
